Adding tests to cmk scenarios

--- a/src/azure-cli/azure/cli/command_modules/botservice/tests/latest/recordings/test_auth_setting.yaml
+++ b/src/azure-cli/azure/cli/command_modules/botservice/tests/latest/recordings/test_auth_setting.yaml
@@ -109,7 +109,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:15:28 GMT
+      - Thu, 28 Jan 2021 07:13:59 GMT
       expires:
       - '-1'
       pragma:
@@ -158,7 +158,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:15:28 GMT
+      - Thu, 28 Jan 2021 07:13:59 GMT
       expires:
       - '-1'
       pragma:
@@ -172,14 +172,14 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-tenant-writes:
-      - '1198'
+      - '1199'
     status:
       code: 200
       message: OK
 - request:
     body: '{"location": "global", "sku": {"name": "F0"}, "kind": "bot", "properties":
       {"displayName": "cli000002", "endpoint": "https://www.google.com/api/messages",
-      "msaAppId": "418fb3a1-3e1b-452f-aacc-1c0836f1ebcc", "isCmekEnabled": false}}'
+      "msaAppId": "440230b9-c91e-458c-88f8-63efbecd86e6", "isCmekEnabled": false}}'
     headers:
       Accept:
       - application/json
@@ -204,7 +204,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002?api-version=2020-06-02
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002","name":"cli000002","type":"Microsoft.BotService/botServices","etag":"\"4700f0c3-0000-0200-0000-6011e6040000\"","location":"global","sku":{"name":"F0"},"kind":"bot","tags":{},"properties":{"displayName":"cli000002","description":null,"iconUrl":"https://docs.botframework.com/static/devportal/client/images/bot-framework-default.png","endpoint":"https://www.google.com/api/messages","msaAppId":"418fb3a1-3e1b-452f-aacc-1c0836f1ebcc","developerAppInsightKey":null,"developerAppInsightsApplicationId":null,"luisAppIds":[],"endpointVersion":"3.0","configuredChannels":["webchat"],"enabledChannels":["webchat","directline"],"isDeveloperAppInsightsApiKeySet":false,"isStreamingSupported":false,"publishingCredentials":null,"parameters":null,"allSettings":null,"manifestUrl":null,"storageResourceId":null,"migrationToken":null,"isCmekEnabled":false,"cmekKeyVaultUrl":null,"openWithHint":null,"appPasswordHint":null,"cmekEncryptionStatus":"Off","provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002","name":"cli000002","type":"Microsoft.BotService/botServices","etag":"\"4d001a96-0000-0200-0000-601264390000\"","location":"global","sku":{"name":"F0"},"kind":"bot","tags":{},"properties":{"displayName":"cli000002","description":null,"iconUrl":"https://docs.botframework.com/static/devportal/client/images/bot-framework-default.png","endpoint":"https://www.google.com/api/messages","msaAppId":"440230b9-c91e-458c-88f8-63efbecd86e6","developerAppInsightKey":null,"developerAppInsightsApplicationId":null,"luisAppIds":[],"endpointVersion":"3.0","configuredChannels":["webchat"],"enabledChannels":["webchat","directline"],"isDeveloperAppInsightsApiKeySet":false,"isStreamingSupported":false,"publishingCredentials":null,"parameters":null,"allSettings":null,"manifestUrl":null,"storageResourceId":null,"migrationToken":null,"isCmekEnabled":false,"cmekKeyVaultUrl":null,"openWithHint":null,"appPasswordHint":null,"cmekEncryptionStatus":"Off","provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
@@ -213,9 +213,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:15:31 GMT
+      - Thu, 28 Jan 2021 07:14:01 GMT
       etag:
-      - '"4700f0c3-0000-0200-0000-6011e6040000"'
+      - '"4d001a96-0000-0200-0000-601264390000"'
       expires:
       - '-1'
       pragma:
@@ -225,7 +225,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1196'
+      - '1199'
     status:
       code: 201
       message: Created
@@ -527,7 +527,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:15:32 GMT
+      - Thu, 28 Jan 2021 07:14:01 GMT
       expires:
       - '-1'
       pragma:
@@ -573,20 +573,20 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/connections/myconnname?api-version=2020-06-02
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/connections/myconnname","name":"cli000002/myconnname","type":"Microsoft.BotService/botServices/connections","etag":"W/\"7c76bb943c4123a74ead7d68bee992e01/27/2021
-        10:15:34 PM\"","location":"global","properties":{"settingId":"6a68c7c9-5b98-9ba6-5393-b0b21b09fab5_195dcb3a-899a-00df-6192","clientId":"clientid","clientSecret":"secret","scopes":"scope1
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/connections/myconnname","name":"cli000002/myconnname","type":"Microsoft.BotService/botServices/connections","etag":"W/\"12227e03b37eacdcc64508d1f1489bdc1/28/2021
+        7:14:03 AM\"","location":"global","properties":{"settingId":"da576ec3-2e3a-88c7-bb00-eebeb58dd8e2_195dcb3a-899a-00df-6192","clientId":"clientid","clientSecret":"secret","scopes":"scope1
         scope2","serviceProviderId":"01340562-8c8f-4892-abd4-90daf0e5face","serviceProviderDisplayName":null,"parameters":[],"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '649'
+      - '648'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:15:34 GMT
+      - Thu, 28 Jan 2021 07:14:03 GMT
       etag:
-      - W/"7c76bb943c4123a74ead7d68bee992e01/27/2021 10:15:34 PM"
+      - W/"12227e03b37eacdcc64508d1f1489bdc1/28/2021 7:14:03 AM"
       expires:
       - '-1'
       pragma:
@@ -596,7 +596,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1198'
+      - '1199'
     status:
       code: 201
       message: Created
@@ -622,20 +622,20 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/connections/myconnname?api-version=2020-06-02
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/connections/myconnname","name":"cli000002/myconnname","type":"Microsoft.BotService/botServices/connections","etag":"W/\"267025df6c35b89862ac51f707901aac1/27/2021
-        10:15:35 PM\"","location":"global","properties":{"settingId":"6a68c7c9-5b98-9ba6-5393-b0b21b09fab5_195dcb3a-899a-00df-6192","clientId":"clientid","clientSecret":"**********","scopes":"scope1
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/connections/myconnname","name":"cli000002/myconnname","type":"Microsoft.BotService/botServices/connections","etag":"W/\"52f6d0adf14feb6bf60b53e21f7488c21/28/2021
+        7:14:04 AM\"","location":"global","properties":{"settingId":"da576ec3-2e3a-88c7-bb00-eebeb58dd8e2_195dcb3a-899a-00df-6192","clientId":"clientid","clientSecret":"**********","scopes":"scope1
         scope2","serviceProviderId":"01340562-8c8f-4892-abd4-90daf0e5face","serviceProviderDisplayName":null,"parameters":[],"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '653'
+      - '652'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:15:34 GMT
+      - Thu, 28 Jan 2021 07:14:04 GMT
       etag:
-      - W/"267025df6c35b89862ac51f707901aac1/27/2021 10:15:35 PM"
+      - W/"52f6d0adf14feb6bf60b53e21f7488c21/28/2021 7:14:04 AM"
       expires:
       - '-1'
       pragma:
@@ -673,17 +673,17 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/connections?api-version=2020-06-02
   response:
     body:
-      string: '{"value":[{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/connections/myconnname","name":"cli000002/myconnname","type":"Microsoft.BotService/botServices/connections","etag":"W/\"78093e870b86293f11afcd586fb99db51/27/2021
-        10:15:35 PM\"","location":"global","properties":{"serviceProviderDisplayName":"Google","id":"6a68c7c9-5b98-9ba6-5393-b0b21b09fab5_195dcb3a-899a-00df-6192","name":"myconnname","serviceProviderId":"01340562-8c8f-4892-abd4-90daf0e5face","provisioningState":"Succeeded"}}]}'
+      string: '{"value":[{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/connections/myconnname","name":"cli000002/myconnname","type":"Microsoft.BotService/botServices/connections","etag":"W/\"2347fba9c8d649313434c982197666831/28/2021
+        7:14:05 AM\"","location":"global","properties":{"serviceProviderDisplayName":"Google","id":"da576ec3-2e3a-88c7-bb00-eebeb58dd8e2_195dcb3a-899a-00df-6192","name":"myconnname","serviceProviderId":"01340562-8c8f-4892-abd4-90daf0e5face","provisioningState":"Succeeded"}}]}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '591'
+      - '590'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:15:35 GMT
+      - Thu, 28 Jan 2021 07:14:05 GMT
       expires:
       - '-1'
       pragma:
@@ -730,7 +730,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Wed, 27 Jan 2021 22:15:36 GMT
+      - Thu, 28 Jan 2021 07:14:07 GMT
       expires:
       - '-1'
       pragma:
@@ -740,7 +740,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-deletes:
-      - '14998'
+      - '14999'
     status:
       code: 200
       message: OK
