--- a/src/azure-cli/azure/cli/command_modules/botservice/tests/latest/recordings/test_botservice_update_directline.yaml
+++ b/src/azure-cli/azure/cli/command_modules/botservice/tests/latest/recordings/test_botservice_update_directline.yaml
@@ -109,7 +109,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:17:21 GMT
+      - Thu, 28 Jan 2021 07:16:06 GMT
       expires:
       - '-1'
       pragma:
@@ -158,7 +158,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:17:21 GMT
+      - Thu, 28 Jan 2021 07:16:05 GMT
       expires:
       - '-1'
       pragma:
@@ -172,14 +172,14 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-tenant-writes:
-      - '1196'
+      - '1199'
     status:
       code: 200
       message: OK
 - request:
     body: '{"location": "global", "sku": {"name": "F0"}, "kind": "bot", "properties":
       {"displayName": "cli000002", "endpoint": "https://www.google.com/api/messages",
-      "msaAppId": "fbde17ad-3902-4864-8352-775efd6172e3", "isCmekEnabled": false}}'
+      "msaAppId": "41da506a-cb5d-4ffa-8937-bea8316e04f9", "isCmekEnabled": false}}'
     headers:
       Accept:
       - application/json
@@ -204,7 +204,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002?api-version=2020-06-02
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002","name":"cli000002","type":"Microsoft.BotService/botServices","etag":"\"47007ec6-0000-0200-0000-6011e6740000\"","location":"global","sku":{"name":"F0"},"kind":"bot","tags":{},"properties":{"displayName":"cli000002","description":null,"iconUrl":"https://docs.botframework.com/static/devportal/client/images/bot-framework-default.png","endpoint":"https://www.google.com/api/messages","msaAppId":"fbde17ad-3902-4864-8352-775efd6172e3","developerAppInsightKey":null,"developerAppInsightsApplicationId":null,"luisAppIds":[],"endpointVersion":"3.0","configuredChannels":["webchat"],"enabledChannels":["webchat","directline"],"isDeveloperAppInsightsApiKeySet":false,"isStreamingSupported":false,"publishingCredentials":null,"parameters":null,"allSettings":null,"manifestUrl":null,"storageResourceId":null,"migrationToken":null,"isCmekEnabled":false,"cmekKeyVaultUrl":null,"openWithHint":null,"appPasswordHint":null,"cmekEncryptionStatus":"Off","provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002","name":"cli000002","type":"Microsoft.BotService/botServices","etag":"\"4d002997-0000-0200-0000-601264b80000\"","location":"global","sku":{"name":"F0"},"kind":"bot","tags":{},"properties":{"displayName":"cli000002","description":null,"iconUrl":"https://docs.botframework.com/static/devportal/client/images/bot-framework-default.png","endpoint":"https://www.google.com/api/messages","msaAppId":"41da506a-cb5d-4ffa-8937-bea8316e04f9","developerAppInsightKey":null,"developerAppInsightsApplicationId":null,"luisAppIds":[],"endpointVersion":"3.0","configuredChannels":["webchat"],"enabledChannels":["webchat","directline"],"isDeveloperAppInsightsApiKeySet":false,"isStreamingSupported":false,"publishingCredentials":null,"parameters":null,"allSettings":null,"manifestUrl":null,"storageResourceId":null,"migrationToken":null,"isCmekEnabled":false,"cmekKeyVaultUrl":null,"openWithHint":null,"appPasswordHint":null,"cmekEncryptionStatus":"Off","provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
@@ -213,9 +213,9 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:17:24 GMT
+      - Thu, 28 Jan 2021 07:16:07 GMT
       etag:
-      - '"47007ec6-0000-0200-0000-6011e6740000"'
+      - '"4d002997-0000-0200-0000-601264b80000"'
       expires:
       - '-1'
       pragma:
@@ -225,7 +225,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1196'
+      - '1197'
     status:
       code: 201
       message: Created
@@ -257,21 +257,21 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/channels/DirectLineChannel?api-version=2020-06-02
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/channels/DirectLineChannel","name":"cli000002/DirectLineChannel","type":"Microsoft.BotService/botServices/channels","etag":"W/\"0294c52d70e3358429f3ceaccb948ab11/27/2021
-        10:17:27 PM\"","location":"global","properties":{"properties":{"DirectLineEmbedCode":null,"sites":[{"siteId":"1XqCUPE5Rdo","siteName":"Default
-        Site","key":"1XqCUPE5Rdo.q2QCfV7xVQrO5hc6ijcgw3dCn-XkXJmVVZvNYASZB2I","key2":"1XqCUPE5Rdo.MaQilntbpVttaYAEas4BF5OFoNyyq-RUnTLCJ86VKe8","isEnabled":true,"isV1Enabled":true,"isV3Enabled":true,"isSecureSiteEnabled":false,"isBlockUserUploadEnabled":false,"trustedOrigins":null}]},"etag":"W/\"0294c52d70e3358429f3ceaccb948ab11/27/2021
-        10:17:27 PM\"","channelName":"DirectLineChannel","location":"global","provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/channels/DirectLineChannel","name":"cli000002/DirectLineChannel","type":"Microsoft.BotService/botServices/channels","etag":"W/\"cea4ab7506593b23a2f2be74142e63501/28/2021
+        7:16:10 AM\"","location":"global","properties":{"properties":{"DirectLineEmbedCode":null,"sites":[{"siteId":"-hXnAG7ypUo","siteName":"Default
+        Site","key":"-hXnAG7ypUo.Yk2ywKEeE6OsVVDpq-PsdJuOUdR5cLoG9h3d3UZXWzc","key2":"-hXnAG7ypUo.pQSDFA0qsl_lushf2zvvlg1qQJ015TFeBIDI1ffVvio","isEnabled":true,"isV1Enabled":true,"isV3Enabled":true,"isSecureSiteEnabled":false,"isBlockUserUploadEnabled":false,"trustedOrigins":null}]},"etag":"W/\"cea4ab7506593b23a2f2be74142e63501/28/2021
+        7:16:10 AM\"","channelName":"DirectLineChannel","location":"global","provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '895'
+      - '893'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:17:27 GMT
+      - Thu, 28 Jan 2021 07:16:10 GMT
       etag:
-      - W/"0294c52d70e3358429f3ceaccb948ab11/27/2021 10:17:27 PM"
+      - W/"cea4ab7506593b23a2f2be74142e63501/28/2021 7:16:10 AM"
       expires:
       - '-1'
       pragma:
@@ -285,7 +285,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1196'
+      - '1199'
     status:
       code: 200
       message: OK
@@ -311,21 +311,21 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/channels/DirectLineChannel?api-version=2020-06-02
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/channels/DirectLineChannel","name":"cli000002/DirectLineChannel","type":"Microsoft.BotService/botServices/channels","etag":"W/\"21107ea93f97d5f40de054400813dc731/27/2021
-        10:17:27 PM\"","location":"global","properties":{"properties":{"DirectLineEmbedCode":null,"sites":[{"siteId":"1XqCUPE5Rdo","siteName":"Default
-        Site","key":null,"key2":null,"isEnabled":true,"isV1Enabled":true,"isV3Enabled":true,"isSecureSiteEnabled":false,"isBlockUserUploadEnabled":false,"trustedOrigins":null}]},"etag":"W/\"21107ea93f97d5f40de054400813dc731/27/2021
-        10:17:27 PM\"","channelName":"DirectLineChannel","location":"global","provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/channels/DirectLineChannel","name":"cli000002/DirectLineChannel","type":"Microsoft.BotService/botServices/channels","etag":"W/\"c7f3eab56c29d1297aa7233a099f79271/28/2021
+        7:16:12 AM\"","location":"global","properties":{"properties":{"DirectLineEmbedCode":null,"sites":[{"siteId":"-hXnAG7ypUo","siteName":"Default
+        Site","key":null,"key2":null,"isEnabled":true,"isV1Enabled":true,"isV3Enabled":true,"isSecureSiteEnabled":false,"isBlockUserUploadEnabled":false,"trustedOrigins":null}]},"etag":"W/\"c7f3eab56c29d1297aa7233a099f79271/28/2021
+        7:16:12 AM\"","channelName":"DirectLineChannel","location":"global","provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '789'
+      - '787'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:17:27 GMT
+      - Thu, 28 Jan 2021 07:16:11 GMT
       etag:
-      - W/"21107ea93f97d5f40de054400813dc731/27/2021 10:17:27 PM"
+      - W/"c7f3eab56c29d1297aa7233a099f79271/28/2021 7:16:12 AM"
       expires:
       - '-1'
       pragma:
@@ -369,21 +369,21 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/channels/DirectLineChannel?api-version=2020-06-02
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/channels/DirectLineChannel","name":"cli000002/DirectLineChannel","type":"Microsoft.BotService/botServices/channels","etag":"W/\"f7e5484682e5eae9446c60831724ce3d1/27/2021
-        10:17:29 PM\"","location":"global","properties":{"properties":{"DirectLineEmbedCode":null,"sites":[{"siteId":"1XqCUPE5Rdo","siteName":"Default
-        Site","key":"1XqCUPE5Rdo.q2QCfV7xVQrO5hc6ijcgw3dCn-XkXJmVVZvNYASZB2I","key2":"1XqCUPE5Rdo.MaQilntbpVttaYAEas4BF5OFoNyyq-RUnTLCJ86VKe8","isEnabled":true,"isV1Enabled":true,"isV3Enabled":true,"isSecureSiteEnabled":true,"isBlockUserUploadEnabled":false,"trustedOrigins":["https://mybotsite1.azurewebsites.net"]}]},"etag":"W/\"f7e5484682e5eae9446c60831724ce3d1/27/2021
-        10:17:29 PM\"","channelName":"DirectLineChannel","location":"global","provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.BotService/botServices/cli000002/channels/DirectLineChannel","name":"cli000002/DirectLineChannel","type":"Microsoft.BotService/botServices/channels","etag":"W/\"a544b78ca1279f2c532e80feb0fd79071/28/2021
+        7:16:14 AM\"","location":"global","properties":{"properties":{"DirectLineEmbedCode":null,"sites":[{"siteId":"-hXnAG7ypUo","siteName":"Default
+        Site","key":"-hXnAG7ypUo.Yk2ywKEeE6OsVVDpq-PsdJuOUdR5cLoG9h3d3UZXWzc","key2":"-hXnAG7ypUo.pQSDFA0qsl_lushf2zvvlg1qQJ015TFeBIDI1ffVvio","isEnabled":true,"isV1Enabled":true,"isV3Enabled":true,"isSecureSiteEnabled":true,"isBlockUserUploadEnabled":false,"trustedOrigins":["https://mybotsite1.azurewebsites.net"]}]},"etag":"W/\"a544b78ca1279f2c532e80feb0fd79071/28/2021
+        7:16:14 AM\"","channelName":"DirectLineChannel","location":"global","provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '930'
+      - '928'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 27 Jan 2021 22:17:29 GMT
+      - Thu, 28 Jan 2021 07:16:13 GMT
       etag:
-      - W/"f7e5484682e5eae9446c60831724ce3d1/27/2021 10:17:29 PM"
+      - W/"a544b78ca1279f2c532e80feb0fd79071/28/2021 7:16:14 AM"
       expires:
       - '-1'
       pragma:
@@ -397,7 +397,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1193'
+      - '1197'
     status:
       code: 200
       message: OK
