--- a/src/azure-cli/azure/cli/command_modules/resource/tests/latest/recordings/test_provider_registration.yaml
+++ b/src/azure-cli/azure/cli/command_modules/resource/tests/latest/recordings/test_provider_registration.yaml
@@ -13,8 +13,8 @@ interactions:
       ParameterSetName:
       - -n
       User-Agent:
-      - python/3.8.6 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
-        azure-mgmt-resource/12.0.0 Azure-SDK-For-Python AZURECLI/2.16.0
+      - python/3.8.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
+        azure-mgmt-resource/12.0.0 Azure-SDK-For-Python AZURECLI/2.18.0
       accept-language:
       - en-US
     method: GET
@@ -29,17 +29,16 @@ interactions:
         US","UK South","UK West","Korea Central","Korea South","France Central","France
         South","Australia Central","Australia Central 2","Germany North","Germany
         West Central","Norway East","Norway West","South Africa North","South Africa
-        West","Switzerland North","Switzerland West","UAE Central","UAE North","East
-        US 2 EUAP","Central US EUAP"],"apiVersions":["2015-06-15"],"capabilities":"None"}],"registrationState":"Unregistered","registrationPolicy":"RegistrationRequired"}'
+        West","Switzerland North","Switzerland West","UAE Central","UAE North"],"apiVersions":["2015-06-15"],"capabilities":"None"}],"registrationState":"Unregistered","registrationPolicy":"RegistrationRequired"}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '1163'
+      - '1128'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 17 Dec 2020 19:32:46 GMT
+      - Fri, 29 Jan 2021 23:24:27 GMT
       expires:
       - '-1'
       pragma:
@@ -69,8 +68,8 @@ interactions:
       ParameterSetName:
       - -n
       User-Agent:
-      - python/3.8.6 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
-        azure-mgmt-resource/12.0.0 Azure-SDK-For-Python AZURECLI/2.16.0
+      - python/3.8.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
+        azure-mgmt-resource/12.0.0 Azure-SDK-For-Python AZURECLI/2.18.0
       accept-language:
       - en-US
     method: POST
@@ -85,131 +84,16 @@ interactions:
         US","UK South","UK West","Korea Central","Korea South","France Central","France
         South","Australia Central","Australia Central 2","Germany North","Germany
         West Central","Norway East","Norway West","South Africa North","South Africa
-        West","Switzerland North","Switzerland West","UAE Central","UAE North","East
-        US 2 EUAP","Central US EUAP"],"apiVersions":["2015-06-15"],"capabilities":"None"}],"registrationState":"Registering","registrationPolicy":"RegistrationRequired"}'
+        West","Switzerland North","Switzerland West","UAE Central","UAE North"],"apiVersions":["2015-06-15"],"capabilities":"None"}],"registrationState":"Registering","registrationPolicy":"RegistrationRequired"}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '1162'
+      - '1127'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 17 Dec 2020 19:32:47 GMT
-      expires:
-      - '-1'
-      pragma:
-      - no-cache
-      strict-transport-security:
-      - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding
-      x-content-type-options:
-      - nosniff
-      x-ms-ratelimit-remaining-subscription-writes:
-      - '1198'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - application/json
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - provider show
-      Connection:
-      - keep-alive
-      ParameterSetName:
-      - -n
-      User-Agent:
-      - python/3.8.6 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
-        azure-mgmt-resource/12.0.0 Azure-SDK-For-Python AZURECLI/2.16.0
-      accept-language:
-      - en-US
-    method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.ClassicInfrastructureMigrate?api-version=2020-10-01
-  response:
-    body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.ClassicInfrastructureMigrate","namespace":"Microsoft.ClassicInfrastructureMigrate","authorization":{"applicationId":"5e5abe2b-83cd-4786-826a-a05653ebb103","roleDefinitionId":"766c4d9b-ef83-4f73-8352-1450a506a69b"},"resourceTypes":[{"resourceType":"classicInfrastructureResources","locations":["East
-        Asia","Southeast Asia","East US","East US 2","West US","North Central US","South
-        Central US","Central US","North Europe","West Europe","Japan East","Japan
-        West","Brazil South","Australia East","Australia Southeast","Central India","West
-        India","South India","Canada Central","Canada East","West US 2","West Central
-        US","UK South","UK West","Korea Central","Korea South","France Central","France
-        South","Australia Central","Australia Central 2","Germany North","Germany
-        West Central","Norway East","Norway West","South Africa North","South Africa
-        West","Switzerland North","Switzerland West","UAE Central","UAE North","East
-        US 2 EUAP","Central US EUAP"],"apiVersions":["2015-06-15"],"capabilities":"None"}],"registrationState":"Registering","registrationPolicy":"RegistrationRequired"}'
-    headers:
-      cache-control:
-      - no-cache
-      content-length:
-      - '1162'
-      content-type:
-      - application/json; charset=utf-8
-      date:
-      - Thu, 17 Dec 2020 19:32:47 GMT
-      expires:
-      - '-1'
-      pragma:
-      - no-cache
-      strict-transport-security:
-      - max-age=31536000; includeSubDomains
-      vary:
-      - Accept-Encoding
-      x-content-type-options:
-      - nosniff
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - application/json
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - provider unregister
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '0'
-      ParameterSetName:
-      - -n
-      User-Agent:
-      - python/3.8.6 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
-        azure-mgmt-resource/12.0.0 Azure-SDK-For-Python AZURECLI/2.16.0
-      accept-language:
-      - en-US
-    method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.ClassicInfrastructureMigrate/unregister?api-version=2020-10-01
-  response:
-    body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.ClassicInfrastructureMigrate","namespace":"Microsoft.ClassicInfrastructureMigrate","authorization":{"applicationId":"5e5abe2b-83cd-4786-826a-a05653ebb103","roleDefinitionId":"766c4d9b-ef83-4f73-8352-1450a506a69b"},"resourceTypes":[{"resourceType":"classicInfrastructureResources","locations":["East
-        Asia","Southeast Asia","East US","East US 2","West US","North Central US","South
-        Central US","Central US","North Europe","West Europe","Japan East","Japan
-        West","Brazil South","Australia East","Australia Southeast","Central India","West
-        India","South India","Canada Central","Canada East","West US 2","West Central
-        US","UK South","UK West","Korea Central","Korea South","France Central","France
-        South","Australia Central","Australia Central 2","Germany North","Germany
-        West Central","Norway East","Norway West","South Africa North","South Africa
-        West","Switzerland North","Switzerland West","UAE Central","UAE North","East
-        US 2 EUAP","Central US EUAP"],"apiVersions":["2015-06-15"],"capabilities":"None"}],"registrationState":"Unregistering","registrationPolicy":"RegistrationRequired"}'
-    headers:
-      cache-control:
-      - no-cache
-      content-length:
-      - '1164'
-      content-type:
-      - application/json; charset=utf-8
-      date:
-      - Thu, 17 Dec 2020 19:32:48 GMT
+      - Fri, 29 Jan 2021 23:24:28 GMT
       expires:
       - '-1'
       pragma:
@@ -241,8 +125,8 @@ interactions:
       ParameterSetName:
       - -n
       User-Agent:
-      - python/3.8.6 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
-        azure-mgmt-resource/12.0.0 Azure-SDK-For-Python AZURECLI/2.16.0
+      - python/3.8.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
+        azure-mgmt-resource/12.0.0 Azure-SDK-For-Python AZURECLI/2.18.0
       accept-language:
       - en-US
     method: GET
@@ -257,17 +141,128 @@ interactions:
         US","UK South","UK West","Korea Central","Korea South","France Central","France
         South","Australia Central","Australia Central 2","Germany North","Germany
         West Central","Norway East","Norway West","South Africa North","South Africa
-        West","Switzerland North","Switzerland West","UAE Central","UAE North","East
-        US 2 EUAP","Central US EUAP"],"apiVersions":["2015-06-15"],"capabilities":"None"}],"registrationState":"Unregistered","registrationPolicy":"RegistrationRequired"}'
+        West","Switzerland North","Switzerland West","UAE Central","UAE North"],"apiVersions":["2015-06-15"],"capabilities":"None"}],"registrationState":"Registering","registrationPolicy":"RegistrationRequired"}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '1163'
+      - '1127'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 17 Dec 2020 19:32:48 GMT
+      - Fri, 29 Jan 2021 23:24:28 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      vary:
+      - Accept-Encoding
+      x-content-type-options:
+      - nosniff
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - provider unregister
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '0'
+      ParameterSetName:
+      - -n
+      User-Agent:
+      - python/3.8.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
+        azure-mgmt-resource/12.0.0 Azure-SDK-For-Python AZURECLI/2.18.0
+      accept-language:
+      - en-US
+    method: POST
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.ClassicInfrastructureMigrate/unregister?api-version=2020-10-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.ClassicInfrastructureMigrate","namespace":"Microsoft.ClassicInfrastructureMigrate","authorization":{"applicationId":"5e5abe2b-83cd-4786-826a-a05653ebb103","roleDefinitionId":"766c4d9b-ef83-4f73-8352-1450a506a69b"},"resourceTypes":[{"resourceType":"classicInfrastructureResources","locations":["East
+        Asia","Southeast Asia","East US","East US 2","West US","North Central US","South
+        Central US","Central US","North Europe","West Europe","Japan East","Japan
+        West","Brazil South","Australia East","Australia Southeast","Central India","West
+        India","South India","Canada Central","Canada East","West US 2","West Central
+        US","UK South","UK West","Korea Central","Korea South","France Central","France
+        South","Australia Central","Australia Central 2","Germany North","Germany
+        West Central","Norway East","Norway West","South Africa North","South Africa
+        West","Switzerland North","Switzerland West","UAE Central","UAE North"],"apiVersions":["2015-06-15"],"capabilities":"None"}],"registrationState":"Unregistering","registrationPolicy":"RegistrationRequired"}'
+    headers:
+      cache-control:
+      - no-cache
+      content-length:
+      - '1129'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Fri, 29 Jan 2021 23:24:29 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      transfer-encoding:
+      - chunked
+      vary:
+      - Accept-Encoding
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-writes:
+      - '1198'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - provider show
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n
+      User-Agent:
+      - python/3.8.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
+        azure-mgmt-resource/12.0.0 Azure-SDK-For-Python AZURECLI/2.18.0
+      accept-language:
+      - en-US
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.ClassicInfrastructureMigrate?api-version=2020-10-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.ClassicInfrastructureMigrate","namespace":"Microsoft.ClassicInfrastructureMigrate","authorization":{"applicationId":"5e5abe2b-83cd-4786-826a-a05653ebb103","roleDefinitionId":"766c4d9b-ef83-4f73-8352-1450a506a69b"},"resourceTypes":[{"resourceType":"classicInfrastructureResources","locations":["East
+        Asia","Southeast Asia","East US","East US 2","West US","North Central US","South
+        Central US","Central US","North Europe","West Europe","Japan East","Japan
+        West","Brazil South","Australia East","Australia Southeast","Central India","West
+        India","South India","Canada Central","Canada East","West US 2","West Central
+        US","UK South","UK West","Korea Central","Korea South","France Central","France
+        South","Australia Central","Australia Central 2","Germany North","Germany
+        West Central","Norway East","Norway West","South Africa North","South Africa
+        West","Switzerland North","Switzerland West","UAE Central","UAE North"],"apiVersions":["2015-06-15"],"capabilities":"None"}],"registrationState":"Unregistering","registrationPolicy":"RegistrationRequired"}'
+    headers:
+      cache-control:
+      - no-cache
+      content-length:
+      - '1129'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Fri, 29 Jan 2021 23:24:30 GMT
       expires:
       - '-1'
       pragma:
